# longfellow-rs

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md
benches/: benchmarks.rs
examples/: advanced_circuits.rs  multi_field.rs  simple_proof.rs
src/: circuit.rs  fft.rs  field.rs  hash.rs  lib.rs  merkle.rs  polynomial.rs  transcript.rs  zk.rs
src/field/: fp128.rs  fp256.rs  gf2_128.rs  mod.rs
src/ligero/: commitment.rs  mod.rs  params.rs  proof.rs  prover.rs  verifier.rs
src/sumcheck/: eq.rs  layer.rs  mod.rs  proof.rs  verifier.rs
tests/: cross_compatibility.rs
