[package]
name = "longfellow-zk"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Longfellow Zero-Knowledge proof system"
license = "Apache-2.0"
repository = "https://github.com/sweis/longfellow-rs"

[dependencies]
sha2 = "0.10"
blake3 = { version = "1.5", optional = true }
rand = "0.8"
rand_chacha = "0.3"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
std = []
blake3_hash = ["blake3"]

[profile.release]
lto = true
codegen-units = 1
